--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 <body>
 
+  <div class="container">
+
+    <div class="card">
+      
+    </div>
+
+  </div>
+
   Notifications 3
 
   Mark all as read
