Added needed script

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="header__btn" id="mark-btn">Mark all as read</p>
         </div>
 
-        <ul class="card__list">
+        <ul class="card__list" id="nots-list">
           <li class="card__list__item unread">
             <img
               class="avatar"
@@ -113,7 +113,7 @@
             </div>
           </li>
 
-          <li class="card__list__item unread">
+          <li class="card__list__item">
             <img
               src="./assets/images/avatar-nathan-peterson.webp"
               alt="Nathan Peterson"
