--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class="container">
       <div class="card">
         <div class="card__header">
-          <h2>
-            Notifications
+          <div class="flex">
+            <h2>Notifications</h2>
             <span class="header__count" id="nots-count">3</span>
-          </h2>
+          </div>
 
           <p class="header__btn" id="mark-btn">Mark all as read</p>
         </div>
