--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <div class="card__header">
+        <div class="card__header flex">
           <div class="flex">
             <h2>Notifications</h2>
             <span class="header__count" id="nots-count">3</span>
@@ -35,13 +35,13 @@
               src="./assets/images/avatar-mark-webber.webp"
               alt="Mark Webber"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Mark Webber</span>
                 <span class="action">reacted to your recent post</span>
                 <span class="subject">My first tournament today!</span>
               </p>
-              <span class="time">1m ago</span>
+              <span class="data__time">1m ago</span>
             </div>
           </li>
 
@@ -50,12 +50,12 @@
               src="./assets/images/avatar-angela-gray.webp"
               alt="Angela Gray"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Angela Gray</span>
                 <span class="action">followed you</span>
               </p>
-              <span class="time">5m ago</span>
+              <span class="data__time">5m ago</span>
             </div>
           </li>
 
@@ -64,13 +64,13 @@
               src="./assets/images/avatar-jacob-thompson.webp"
               alt="Jacob Thompson"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Jacob Thompson</span>
                 <span class="action">has joined your group</span>
                 <span class="subject">Chess Club</span>
               </p>
-              <span class="time">1 day ago</span>
+              <span class="data__time">1 day ago</span>
             </div>
           </li>
 
@@ -79,12 +79,12 @@
               src="./assets/images/avatar-rizky-hasanuddin.webp"
               alt="Rizky Hasanuddin"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Rizky Hasanuddin</span>
                 <span class="action">sent you a private message</span>
               </p>
-              <span class="time">5 days ago</span>
+              <span class="data__time">5 days ago</span>
               <p class="message">
                 Hello, thanks for setting up the Chess Club. I've been a member
                 for a few weeks now and I'm already having lots of fun and
@@ -98,12 +98,12 @@
               src="./assets/images/avatar-kimberly-smith.webp"
               alt="Kimberly Smith"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Kimberly Smith</span>
                 <span class="action">commented on your picture</span>
               </p>
-              <span class="time">1 week ago</span>
+              <span class="data__time">1 week ago</span>
             </div>
             <div class="picture">
               <img
@@ -118,27 +118,27 @@
               src="./assets/images/avatar-nathan-peterson.webp"
               alt="Nathan Peterson"
             />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Nathan Peterson</span>
                 <span class="action">reacted to your recent post</span>
                 <span class="subject">
                   5 end-game strategies to increase your win rate
                 </span>
               </p>
-              <span class="time">2 weeks ago</span>
+              <span class="data__time">2 weeks ago</span>
             </div>
           </li>
 
           <li class="card__list__item">
             <img src="./assets/images/avatar-anna-kim.webp" alt="Anna Kim" />
-            <div class="data">
-              <p class="main-data">
+            <div class="item__data">
+              <p class="data__main">
                 <span class="name">Anna Kim</span>
                 <span class="action">left the group</span>
                 <span class="subject">Chess Club</span>
               </p>
-              <span class="time">2 weeks ago</span>
+              <span class="data__time">2 weeks ago</span>
             </div>
           </li>
         </ul>
