--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card">
+      <div class="card" id="card">
         <div class="card__header flex">
           <div class="flex">
             <h2>Notifications</h2>
@@ -28,10 +28,11 @@
           <p class="header__btn" id="mark-btn">Mark all as read</p>
         </div>
 
+        <!-- You can comment this list, then head into script file and uncomment "for" loop & something else. I have built this whole list with DOM manipulations there -->
+
         <ul class="card__list" id="nots-list">
           <li class="card__list__item unread">
             <img
-              class="avatar"
               src="./assets/images/avatar-mark-webber.webp"
               alt="Mark Webber"
             />
